# ogre-ffmpeg-videoplayer

./: BaseApplication.cpp  BaseApplication.h  CMakeLists.txt  Readme.md  VideoPlayer.cpp  VideoPlayer.h  main.cpp
cmake/: FindOIS.cmake
demo/: Application.cpp  Application.h  BaseApplication.cpp  BaseApplication.h  CMakeLists.txt  SDLMovieAudioFactory.cpp  main.cpp
src/: audiodecoder.cpp  audiodecoder.hpp  videodefs.hpp  videoplayer.cpp  videoplayer.hpp  videostate.cpp  videostate.hpp
